added project and updated resume

--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
                     <div class="col-lg-10">
                         <p class="paper my-2 pl-2">
                             <!-- <b></b> <br> -->
-                            <span class="papertitle"><a href="https://arxiv.org/"
+                            <span class="papertitle"><a href="https://ieeexplore.ieee.org/document/10191913"
                                     target="_blank">Self-Supervision and Weak Supervision for Accurate and 
                                     Interpretable Chest X-Ray Classification Models</a></span><br>
                             <span class="thisauthor">Abhiroop Talasila</span>, Akshaya Karthikeyan, Shanmukh Alle, Maitreya Maity, U. Deva Priyakumar<br>
                             <b>IJCNN'23</b> <br>
 
-                            <a class="tag" href="https://arxiv.org/" target="_blank">pdf</a>
+                            <!-- <a class="tag" href="https://ieeexplore.ieee.org/document/10191913" target="_blank">pdf</a> -->
                         </p>
                     </div>
                 </div>
@@ -139,12 +139,11 @@
                             <span class="papertitle"><a href="https://www.tandfonline.com/doi/full/10.1080/23311916.2021.1920707"
                                     target="_blank">Current state of artificial intelligence applications in ophthalmology 
                                     and their potential to influence clinical practice</a></span><br>
-                                <span style="font-family: 'Roboto', sans-serif; line-height: 1.1; font-weight: 300;"><i
-                                    class="fas fa-trophy"></i> <b>Best Poster Presentation Award @ USICON'21</b></span> <br />
                             Dasharathraj K Shetty, <span class="thisauthor">Abhiroop Talasila</span>, Swapna Shanbhag, B.M Zeeshan Hameed, Nithesh Naik
-                            <br><b>Cogent Engineering</b> <br>
+                            <br><span style="font-family: 'Roboto', sans-serif; line-height: 1.1; font-weight: 300;"><i
+                                class="fas fa-trophy"></i> <b>Best Poster Presentation Award @ USICON'21</b></span> | <b>Cogent Engineering'21</b> <br>
 
-                            <a class="tag" href="https://www.tandfonline.com/doi/pdf/10.1080/23311916.2021.1920707" target="_blank">pdf</a>
+                            <!-- <a class="tag" href="https://www.tandfonline.com/doi/pdf/10.1080/23311916.2021.1920707" target="_blank">pdf</a> -->
                         </p>
                     </div>
                 </div>
@@ -161,8 +160,8 @@
                             B.M Zeeshan Hameed, Bhaskar Somani, Nithesh Naik, <span class="thisauthor">Abhiroop Talasila</span>, Milap Shah, Sourabh Reddy
                             <br><b>European Urology'21</b> <br>
 
-                            <a class="tag" href="https://www.europeanurology.com/article/S0302-2838(21)00624-2/pdf"
-                                target="_blank">pdf</a>
+                            <!-- <a class="tag" href="https://www.europeanurology.com/article/S0302-2838(21)00624-2/pdf" -->
+                                <!-- target="_blank">pdf</a> -->
                         </p>
                     </div>
                 </div>
@@ -239,7 +238,7 @@
                     <div class="col-lg-10">
                         <p class="paper my-2 pl-2">
                             <span class="papertitle">International Institute of Information Technology, Hyderabad</span><br>
-                            <i>Master of Science by Research in CSE</i>&nbsp | CGPA: 9.2 |&nbsp August'22 – Present<br>
+                            <i>Master of Science by Research in CSE</i>&nbsp | CGPA: 9.2 |&nbsp July'22 – Present<br>
                             
                         </p>
                     </div>
@@ -272,6 +271,24 @@
                                 <li>Developed a CLI application to generate subtitles for video files on-device automatically</li>
                                 <li>Implemented MFCC features to segment audio on non-speech segments and perform speech recognition</li>
                                 <li>Improved performance using an external scorer (language model) and added support for GPU-based inference</li>
+                            </ul><br>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-2 my-auto">
+                        <img class="sideimg" lsrc="images/nn.gif">
+                    </div>
+                    <div class="col-lg-10">
+                        <p class="paper my-2 pl-2">
+                            <span class="papertitle">from scratch</span><br>
+                            minimal implementations from scratch of the following:
+                            <ul>
+                                <li>baby86: a minimal x86 "bootloader" to print stuff on screen</li>
+                                <li>nn: dense neural network with multiple layers and activation functions</li>
+                                <li>cnn: NumPy-only CNN with Conv and MaxPool layers</li>
+                                <li>torch: not-so-minimal implementation of the torch API</li>
                             </ul><br>
                         </p>
                     </div>
